syntax = "proto3";

option go_package = "./clusterpb";

package clusterpb;

service ClusterNode {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc RunCommand(CommandRequest) returns (CommandResponse);
}

message Node {
  string node_id = 1;
  string node_addr = 2;
  bool alive = 3;
  int64 last_seen = 4;
}

message HeartbeatRequest {
  Node self = 1;
  repeated Node peers = 2;
}

message HeartbeatResponse {
  repeated Node peers = 1;
}

message CommandRequest {
  string command = 1;
  string key = 2;
  repeated bytes args = 3;
}

message CommandResponse {
  bytes data = 1;
  string error = 2;
}
